HRU-8147: css changes for issue 52 The buttons in the Supernova2 is not aligned properly..

--- a/grails-app/assets/stylesheets/changeexpiredpassword.css
+++ b/grails-app/assets/stylesheets/changeexpiredpassword.css
@@ -150,10 +150,7 @@ table {
 	height: 2.8em;
 }
 /* Mobile Portrait */
-@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 736px)
-  and (orientation: portrait) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 736px) and (orientation: portrait) {
 
 	.input-text{
 	    width: 11em;
@@ -176,10 +173,7 @@ table {
 }
 
 /* Mobile Landscape */
-@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 736px)
-  and (orientation: landscape) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 736px) and (orientation: landscape) {
 	.tabletext{
 		    text-align: left;
 		    width: 0em ;
@@ -189,10 +183,7 @@ table {
 }
 
 /* Tablet Portrait*/
-@media only screen
-  and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (orientation: portrait) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
 	.tabletext {
 			text-align: right;
 			width: 35%;
@@ -208,10 +199,7 @@ table {
 }
 
 /* Tablet Landscape*/
-@media only screen
-  and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (orientation: landscape) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
 	.tabletext {
 		text-align: right;
 		width: 35%;
